--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "description": "My website edit",
   "main": "uno.config.js",
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC"
-}
+} 
